
[TestParseTypeAnnNoErrors/FuncWithoutParams - 1]
&ast.FuncTypeAnn{
    Return: &ast.NumberTypeAnn{
        span: 1:9-1:15,
    },
    span: 1:1-1:15,
}
---

[TestParseTypeAnnNoErrors/StringLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.StrLit{
        Value: "hello",
        span: 1:1-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseTypeAnnNoErrors/NumberTypeAnn - 1]
&ast.NumberTypeAnn{
    span: 1:1-1:7,
}
---

[TestParseTypeAnnNoErrors/StringTypeAnn - 1]
&ast.StringTypeAnn{
    span: 1:1-1:7,
}
---

[TestParseTypeAnnNoErrors/NumberLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.NumLit{
        Value: 5,
        span: 1:1-1:2,
    },
    span: 1:1-1:2,
}
---

[TestParseTypeAnnNoErrors/FuncWithParams - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:4-1:5,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 1:7-1:13,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "y",
                span: 1:15-1:16,
            },
            TypeAnn: &ast.StringTypeAnn{
                span: 1:18-1:24,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: 1:29-1:36,
    },
    span: 1:1-1:36,
}
---

[TestParseTypeAnnNoErrors/FuncWithTypeParams - 1]
&ast.FuncTypeAnn{
    TypeParams: []*ast.TypeParam{
        &ast.TypeParam{
            Name: "T",
            Constraint: &ast.NumberTypeAnn{
                span: 1:7-1:13,
            },
        },
        &ast.TypeParam{
            Name: "U",
            Constraint: &ast.StringTypeAnn{
                span: 1:18-1:24,
            },
        },
    },
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:26-1:27,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:29-1:30,
                },
                span: 1:29-1:30,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "y",
                span: 1:32-1:33,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:35-1:36,
                },
                span: 1:35-1:36,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: 1:41-1:48,
    },
    span: 1:1-1:48,
}
---

[TestParseTypeAnnNoErrors/UnionAndIntersectionType - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.IntersectionTypeAnn{
            Types: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "A",
                        span: 1:1-1:2,
                    },
                    span: 1:1-1:2,
                },
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "B",
                        span: 1:5-1:6,
                    },
                    span: 1:5-1:6,
                },
            },
            span: 1:1-1:6,
        },
        &ast.IntersectionTypeAnn{
            Types: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "X",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Y",
                        span: 1:13-1:14,
                    },
                    span: 1:13-1:14,
                },
            },
            span: 1:9-1:14,
        },
    },
    span: 1:1-1:14,
}
---

[TestParseTypeAnnNoErrors/IntersectionType - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 1:1-1:2,
            },
            span: 1:1-1:2,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 1:5-1:6,
            },
            span: 1:5-1:6,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: 1:9-1:10,
            },
            span: 1:9-1:10,
        },
    },
    span: 1:1-1:10,
}
---

[TestParseTypeAnnNoErrors/UnionType - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 1:1-1:2,
            },
            span: 1:1-1:2,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 1:5-1:6,
            },
            span: 1:5-1:6,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: 1:9-1:10,
            },
            span: 1:9-1:10,
        },
    },
    span: 1:1-1:10,
}
---

[TestParseTypeAnnNoErrors/IndexedTypeWithDot - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "A",
            span: 1:1-1:2,
        },
        Right: &ast.Ident{
            Name: "B",
            span: 1:3-1:4,
        },
    },
    span: 1:1-1:4,
}
---

[TestParseTypeAnnNoErrors/IndexedTypeWithBrackets - 1]
&ast.IndexTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 1:1-1:2,
        },
        span: 1:1-1:2,
    },
    Index: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 1:3-1:4,
        },
        span: 1:3-1:4,
    },
    span: 1:1-1:5,
}
---

[TestParseTypeAnnNoErrors/MutableType - 1]
&ast.MutableTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 1:5-1:6,
        },
        span: 1:5-1:6,
    },
    span: 1:5-1:6,
}
---

[TestParseTypeAnnNoErrors/ConditionalType - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 1:4-1:5,
        },
        span: 1:4-1:5,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 1:8-1:9,
        },
        span: 1:8-1:9,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "C",
            span: 1:12-1:13,
        },
        span: 1:12-1:13,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "D",
            span: 1:23-1:24,
        },
        span: 1:23-1:24,
    },
    span: 1:1-1:24,
}
---

[TestParseTypeAnnNoErrors/BasicObjectType - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "a",
                span: 1:2-1:3,
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "A",
                    span: 1:5-1:6,
                },
                span: 1:5-1:6,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "b",
                span: 1:8-1:9,
            },
            Optional: true,
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "B",
                    span: 1:12-1:13,
                },
                span: 1:12-1:13,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name: "c",
                    span: 1:16-1:17,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "C",
                    span: 1:20-1:21,
                },
                span: 1:20-1:21,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name: "d",
                    span: 1:24-1:25,
                },
            },
            Optional: true,
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "D",
                    span: 1:29-1:30,
                },
                span: 1:29-1:30,
            },
        },
    },
    span: 1:1-1:31,
}
---

[TestParseTypeAnnNoErrors/MappedObjectType - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Keys",
                        span: 1:21-1:25,
                    },
                    TypeArgs: []ast.TypeAnn{
                        &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: 1:26-1:27,
                            },
                            span: 1:26-1:27,
                        },
                    },
                    span: 1:21-1:28,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:7-1:8,
                    },
                    span: 1:7-1:8,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
                span: 1:7-1:11,
            },
        },
    },
    span: 1:1-1:29,
}
---

[TestParseTypeAnnNoErrors/QualifiedTypeRefWithTypeArgs - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 1:1-1:4,
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: 1:5-1:8,
        },
    },
    TypeArgs: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 1:9-1:10,
            },
            span: 1:9-1:10,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 1:12-1:13,
            },
            span: 1:12-1:13,
        },
    },
    span: 1:1-1:14,
}
---

[TestParseTypeAnnNoErrors/QualifiedTypeRef - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 1:1-1:4,
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: 1:5-1:8,
        },
    },
    span: 1:1-1:8,
}
---

[TestParseTypeAnnNoErrors/DeepQualifiedTypeRef - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 1:1-1:4,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 1:5-1:8,
            },
        },
        Right: &ast.Ident{
            Name: "Baz",
            span: 1:9-1:12,
        },
    },
    span: 1:1-1:12,
}
---

[TestParseTypeAnnNoErrors/RegexLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.RegexLit{
        Value: "/hello/gi",
        span: 1:1-1:9,
    },
    span: 1:1-1:9,
}
---

[TestParseTypeAnnNoErrors/ConditionalTypeWithInfer - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:4-1:5,
        },
        span: 1:4-1:5,
    },
    Extends: &ast.FuncTypeAnn{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.RestPat{
                    Pattern: &ast.IdentPat{
                        Name: "args",
                        span: 1:14-1:18,
                    },
                    span: 1:11-1:18,
                },
                TypeAnn: &ast.InferTypeAnn{
                    Name: "P",
                    span: 1:20-1:27,
                },
            },
        },
        Return: &ast.AnyTypeAnn{
            span: 1:32-1:35,
        },
        span: 1:8-1:35,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "P",
            span: 1:38-1:39,
        },
        span: 1:38-1:39,
    },
    Else: &ast.NeverTypeAnn{
        span: 1:49-1:54,
    },
    span: 1:1-1:54,
}
---

[TestParseTypeAnnNoErrors/InferType - 1]
&ast.InferTypeAnn{
    Name: "T",
    span: 1:1-1:8,
}
---

[TestParseTypeAnnNoErrors/ConditionalTypeWithChaining - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 1:4-1:5,
        },
        span: 1:4-1:5,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 1:8-1:9,
        },
        span: 1:8-1:9,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "C",
            span: 1:12-1:13,
        },
        span: 1:12-1:13,
    },
    Else: &ast.CondTypeAnn{
        Check: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "E",
                span: 1:24-1:25,
            },
            span: 1:24-1:25,
        },
        Extends: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "F",
                span: 1:28-1:29,
            },
            span: 1:28-1:29,
        },
        Then: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "G",
                span: 1:32-1:33,
            },
            span: 1:32-1:33,
        },
        Else: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "H",
                span: 1:43-1:44,
            },
            span: 1:43-1:44,
        },
        span: 1:21-1:44,
    },
    span: 1:1-1:44,
}
---

[TestParseTypeAnnNoErrors/FalseLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        span: 1:1-1:6,
    },
    span: 1:1-1:6,
}
---

[TestParseTypeAnnNoErrors/TrueLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        Value: true,
        span: 1:1-1:5,
    },
    span: 1:1-1:5,
}
---

[TestParseTypeAnnNoErrors/UnknownTypeAnn - 1]
&ast.UnknownTypeAnn{
    span: 1:1-1:8,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithRestSpread - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "x",
                span: 1:2-1:3,
            },
            Value: &ast.StringTypeAnn{
                span: 1:5-1:11,
            },
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:16-1:17,
                },
                span: 1:16-1:17,
            },
            span: 1:13-1:17,
        },
    },
    span: 1:1-1:18,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithOnlyRestSpread - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:5-1:6,
                },
                span: 1:5-1:6,
            },
            span: 1:2-1:6,
        },
    },
    span: 1:1-1:7,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithMultipleRestSpread - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "x",
                span: 1:2-1:3,
            },
            Value: &ast.StringTypeAnn{
                span: 1:5-1:11,
            },
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:16-1:17,
                },
                span: 1:16-1:17,
            },
            span: 1:13-1:17,
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "y",
                span: 1:19-1:20,
            },
            Value: &ast.NumberTypeAnn{
                span: 1:22-1:28,
            },
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 1:33-1:34,
                },
                span: 1:33-1:34,
            },
            span: 1:30-1:34,
        },
    },
    span: 1:1-1:35,
}
---

[TestParseTypeAnnNoErrors/Symbol - 1]
&ast.SymbolTypeAnn{
    span: 1:1-1:7,
}
---

[TestParseTypeAnnNoErrors/UniqueSymbol - 1]
&ast.UniqueSymbolTypeAnn{
    span: 1:1-1:14,
}
---

[TestParseTypeAnnNoErrors/TemplateLiteralTypeNoParams - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello-world",
            Span: 1:2-1:14,
        },
    },
    span: 1:1-1:14,
}
---

[TestParseTypeAnnNoErrors/TemplateLiteralType - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello-",
            Span: 1:2-1:10,
        },
        &ast.Quasi{
            Span: 1:12-1:13,
        },
    },
    TypeAnns: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 1:10-1:11,
            },
            span: 1:10-1:11,
        },
    },
    span: 1:1-1:13,
}
---

[TestParseTypeAnnNoErrors/TemplateLiteralTypeMultipleParams - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Span: 1:2-1:4,
        },
        &ast.Quasi{
            Value: "-",
            Span: 1:6-1:9,
        },
        &ast.Quasi{
            Value: "-",
            Span: 1:11-1:14,
        },
        &ast.Quasi{
            Span: 1:16-1:17,
        },
    },
    TypeAnns: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 1:4-1:5,
            },
            span: 1:4-1:5,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 1:9-1:10,
            },
            span: 1:9-1:10,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: 1:14-1:15,
            },
            span: 1:14-1:15,
        },
    },
    span: 1:1-1:17,
}
---

[TestParseTypeAnnNoErrors/KeyOfType - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1:7-1:8,
        },
        span: 1:7-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseTypeAnnNoErrors/KeyOfObjectType - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.ObjectTypeAnn{
        Elems: []ast.ObjTypeAnnElem{
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "x",
                    span: 1:8-1:9,
                },
                Value: &ast.StringTypeAnn{
                    span: 1:11-1:17,
                },
            },
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "y",
                    span: 1:19-1:20,
                },
                Value: &ast.NumberTypeAnn{
                    span: 1:22-1:28,
                },
            },
        },
        span: 1:7-1:29,
    },
    span: 1:1-1:29,
}
---

[TestParseTypeAnnNoErrors/UnionTypeWithKeyOf - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.KeyOfTypeAnn{
            Type: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:7-1:8,
                },
                span: 1:7-1:8,
            },
            span: 1:1-1:8,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 1:11-1:12,
            },
            span: 1:11-1:12,
        },
    },
    span: 1:1-1:12,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeOptionalProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 1:28-1:29,
                        },
                        span: 1:28-1:29,
                    },
                    span: 1:22-1:29,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:8-1:9,
                    },
                    span: 1:8-1:9,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 1:10-1:11,
                    },
                    span: 1:10-1:11,
                },
                span: 1:8-1:12,
            },
            Optional: &"add",
        },
    },
    span: 1:1-1:30,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypePropertyRenaming - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 1:39-1:40,
                        },
                        span: 1:39-1:40,
                    },
                    span: 1:33-1:40,
                },
            },
            Name: &ast.TemplateLitTypeAnn{
                Quasis: []*ast.Quasi{
                    &ast.Quasi{
                        Value: "prefix_",
                        Span: 1:4-1:13,
                    },
                    &ast.Quasi{
                        Span: 1:15-1:16,
                    },
                },
                TypeAnns: []ast.TypeAnn{
                    &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "K",
                            span: 1:13-1:14,
                        },
                        span: 1:13-1:14,
                    },
                },
                span: 1:3-1:16,
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:19-1:20,
                    },
                    span: 1:19-1:20,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 1:21-1:22,
                    },
                    span: 1:21-1:22,
                },
                span: 1:19-1:23,
            },
        },
    },
    span: 1:1-1:41,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeWithFiltering - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 1:27-1:28,
                        },
                        span: 1:27-1:28,
                    },
                    span: 1:21-1:28,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:7-1:8,
                    },
                    span: 1:7-1:8,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
                span: 1:7-1:11,
            },
            Check: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:32-1:33,
                    },
                    span: 1:32-1:33,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 1:34-1:35,
                    },
                    span: 1:34-1:35,
                },
                span: 1:32-1:36,
            },
            Extends: &ast.StringTypeAnn{
                span: 1:39-1:45,
            },
        },
    },
    span: 1:1-1:46,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeRemoveOptionalProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 1:29-1:30,
                        },
                        span: 1:29-1:30,
                    },
                    span: 1:23-1:30,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 1:11-1:12,
                    },
                    span: 1:11-1:12,
                },
                span: 1:9-1:13,
            },
            Optional: &"remove",
        },
    },
    span: 1:1-1:31,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeAddOptionalProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 1:29-1:30,
                        },
                        span: 1:29-1:30,
                    },
                    span: 1:23-1:30,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 1:11-1:12,
                    },
                    span: 1:11-1:12,
                },
                span: 1:9-1:13,
            },
            Optional: &"add",
        },
    },
    span: 1:1-1:31,
}
---

[TestParseTypeAnnNoErrors/MutableUnionType - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.MutableTypeAnn{
            Target: &ast.NumberTypeAnn{
                span: 1:5-1:11,
            },
            span: 1:5-1:11,
        },
        &ast.StringTypeAnn{
            span: 1:14-1:20,
        },
    },
    span: 1:5-1:20,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithReadonlyProperty - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "id",
                span: 1:2-1:4,
            },
            Value: &ast.NumberTypeAnn{
                span: 1:6-1:12,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "name",
                span: 1:23-1:27,
            },
            Readonly: true,
            Value: &ast.StringTypeAnn{
                span: 1:29-1:35,
            },
        },
    },
    span: 1:1-1:36,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeAddReadonlyProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 1:37-1:38,
                        },
                        span: 1:37-1:38,
                    },
                    span: 1:31-1:38,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:17-1:18,
                    },
                    span: 1:17-1:18,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 1:19-1:20,
                    },
                    span: 1:19-1:20,
                },
                span: 1:17-1:21,
            },
            ReadOnly: &"add",
        },
    },
    span: 1:1-1:39,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeReadonlyProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 1:36-1:37,
                        },
                        span: 1:36-1:37,
                    },
                    span: 1:30-1:37,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:16-1:17,
                    },
                    span: 1:16-1:17,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 1:18-1:19,
                    },
                    span: 1:18-1:19,
                },
                span: 1:16-1:20,
            },
            ReadOnly: &"add",
        },
    },
    span: 1:1-1:38,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeRemoveReadonlyProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 1:37-1:38,
                        },
                        span: 1:37-1:38,
                    },
                    span: 1:31-1:38,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 1:17-1:18,
                    },
                    span: 1:17-1:18,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 1:19-1:20,
                    },
                    span: 1:19-1:20,
                },
                span: 1:17-1:21,
            },
            ReadOnly: &"remove",
        },
    },
    span: 1:1-1:39,
}
---

[TestParseTypeAnnNoErrors/VoidTypeAnn - 1]
&ast.VoidTypeAnn{
    span: 1:1-1:5,
}
---

[TestParseTypeAnnErrorHandling/KeyofMissingType - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.ErrorTypeAnn{
        span: 1:1-1:6,
    },
    span: 1:1-1:6,
}
---

[TestParseTypeAnnErrorHandling/IncompleteUnion - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 1:1-1:7,
        },
        &ast.ErrorTypeAnn{
            span: 1:9-1:9,
        },
    },
    span: 1:1-1:9,
}
---

[TestParseTypeAnnErrorHandling/IncompleteIntersection - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1:1-1:7,
        },
        &ast.ErrorTypeAnn{
            span: 1:9-1:9,
        },
    },
    span: 1:1-1:9,
}
---

[TestParseTypeAnnErrorHandling/FuncTypeMissingReturnType - 1]
&ast.FuncTypeAnn{
    Return: &ast.ErrorTypeAnn{
        span: 1:8-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseTypeAnnErrorHandling/PropertyMissingType - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "x",
                span: 1:2-1:3,
            },
            Value: &ast.ErrorTypeAnn{
                span: 1:5-1:6,
            },
        },
    },
    span: 1:1-1:6,
}
---

[TestParseTypeAnnErrorHandling/KeyofMissingType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:1-1:6,
        Message: "expected type annotation after 'keyof'",
    },
}
---

[TestParseTypeAnnErrorHandling/IncompleteIntersection - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:9-1:9,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/IncompleteUnion - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:9-1:9,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/PropertyMissingType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:5-1:6,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/FuncTypeMissingReturnType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:8-1:8,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/ConditionalTypeMissingThen - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 1:4-1:5,
        },
        span: 1:4-1:5,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 1:8-1:9,
        },
        span: 1:8-1:9,
    },
    Then: &ast.ErrorTypeAnn{
        span: 1:12-1:13,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "D",
            span: 1:21-1:22,
        },
        span: 1:21-1:22,
    },
    span: 1:1-1:22,
}
---

[TestParseTypeAnnErrorHandling/ConditionalTypeMissingElse - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 1:4-1:5,
        },
        span: 1:4-1:5,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 1:8-1:9,
        },
        span: 1:8-1:9,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "C",
            span: 1:12-1:13,
        },
        span: 1:12-1:13,
    },
    Else: &ast.ErrorTypeAnn{
        span: 1:22-1:22,
    },
    span: 1:1-1:22,
}
---

[TestParseTypeAnnErrorHandling/ConditionalTypeMissingThen - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:12-1:13,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/ConditionalTypeMissingElse - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:22-1:22,
        Message: "expected a type annotation",
    },
    &parser.Error{
        Span: 1:22-1:22,
        Message: "Expected } but got ",
    },
}
---

[TestParseTypeAnnNoErrors/UnionTypeWithTypeOf - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeOfTypeAnn{
            Value: &ast.Ident{
                Name: "x",
                span: 1:8-1:9,
            },
            span: 1:8-1:9,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 1:12-1:13,
            },
            span: 1:12-1:13,
        },
    },
    span: 1:8-1:13,
}
---

[TestParseTypeAnnNoErrors/IntersectionTypeWithTypeOf - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeOfTypeAnn{
            Value: &ast.Ident{
                Name: "x",
                span: 1:8-1:9,
            },
            span: 1:8-1:9,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 1:12-1:13,
            },
            span: 1:12-1:13,
        },
    },
    span: 1:8-1:13,
}
---

[TestParseTypeAnnNoErrors/IntersectionTypeWithKeyOf - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.KeyOfTypeAnn{
            Type: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:7-1:8,
                },
                span: 1:7-1:8,
            },
            span: 1:1-1:8,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 1:11-1:12,
            },
            span: 1:11-1:12,
        },
    },
    span: 1:1-1:12,
}
---

[TestParseTypeAnnNoErrors/TypeOfIdent - 1]
&ast.TypeOfTypeAnn{
    Value: &ast.Ident{
        Name: "x",
        span: 1:8-1:9,
    },
    span: 1:8-1:9,
}
---

[TestParseTypeAnnNoErrors/TupleWithRestSpreadArray - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 1:2-1:8,
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Array",
                    span: 1:13-1:18,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.StringTypeAnn{
                        span: 1:19-1:25,
                    },
                },
                span: 1:13-1:26,
            },
            span: 1:10-1:26,
        },
    },
    span: 1:1-1:27,
}
---

[TestParseTypeAnnNoErrors/TupleWithTrailingRestSpread - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 1:2-1:8,
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:13-1:14,
                },
                span: 1:13-1:14,
            },
            span: 1:10-1:14,
        },
    },
    span: 1:1-1:15,
}
---

[TestParseTypeAnnNoErrors/TupleWithLeadingRestSpread - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1:5-1:6,
                },
                span: 1:5-1:6,
            },
            span: 1:2-1:6,
        },
        &ast.StringTypeAnn{
            span: 1:8-1:14,
        },
    },
    span: 1:1-1:15,
}
---

[TestParseTypeAnnErrorHandling/RestSpreadMissingType - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 1:2-1:8,
        },
        &ast.ErrorTypeAnn{
            span: 1:10-1:13,
        },
    },
    span: 1:1-1:14,
}
---

[TestParseTypeAnnErrorHandling/RestSpreadMissingType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:10-1:13,
        Message: "expected type annotation after '...'",
    },
}
---

[TestParseTypeAnnNoErrors/UnionOfFunctions - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 1:6-1:7,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 1:9-1:15,
                    },
                },
            },
            Return: &ast.StringTypeAnn{
                span: 1:20-1:26,
            },
            span: 1:2-1:26,
        },
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 1:35-1:36,
                    },
                    TypeAnn: &ast.StringTypeAnn{
                        span: 1:38-1:44,
                    },
                },
            },
            Return: &ast.NumberTypeAnn{
                span: 1:49-1:55,
            },
            span: 1:31-1:55,
        },
    },
    span: 1:2-1:55,
}
---

[TestParseTypeAnnNoErrors/IntersectionOfFunctions - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 1:6-1:7,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 1:9-1:15,
                    },
                },
            },
            Return: &ast.StringTypeAnn{
                span: 1:20-1:26,
            },
            span: 1:2-1:26,
        },
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 1:35-1:36,
                    },
                    TypeAnn: &ast.StringTypeAnn{
                        span: 1:38-1:44,
                    },
                },
            },
            Return: &ast.NumberTypeAnn{
                span: 1:49-1:55,
            },
            span: 1:31-1:55,
        },
    },
    span: 1:2-1:55,
}
---
